--- a/googleOSD/googleOSD/googleOSD/App.xaml
+++ b/googleOSD/googleOSD/googleOSD/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="GoogleQSD.App"
+﻿<Application x:Class="GoogleOSD.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GoogleQSD"
+             xmlns:local="clr-namespace:GoogleOSD"
              StartupUri="GoogleAuth.xaml">
 	<Application.Resources>
 		<ResourceDictionary>
