--- a/googleOSD/googleOSD/googleOSD/GCalender.xaml
+++ b/googleOSD/googleOSD/googleOSD/GCalender.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="GoogleQSD.GCalender"
+﻿<Window x:Class="GoogleOSD.GCalender"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GoogleQSD"
+        xmlns:local="clr-namespace:GoogleOSD"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
         Title="スケジュール管理" Height="800" Width="1050" 
