--- a/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
+++ b/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="GoogleQSD.GoogleAuth"
+﻿<Window x:Class="GoogleOSD.GoogleAuth"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GoogleQSD"
+        xmlns:local="clr-namespace:GoogleOSD"
         mc:Ignorable="d"
         Title="Google認証" Height="450" Width="800">
 	<Window.Resources>
