--- a/googleOSD/googleOSD/googleOSD/GoogleDriveBrouser.xaml
+++ b/googleOSD/googleOSD/googleOSD/GoogleDriveBrouser.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="GoogleQSD.GoogleDriveBrouser"
+﻿<Window x:Class="GoogleOSD.GoogleDriveBrouser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GoogleQSD"
+        xmlns:local="clr-namespace:GoogleOSD"
         mc:Ignorable="d"
         Title="GoogleDriveブラウザ" Height="380" Width="700"
         WindowStartupLocation="CenterScreen" 
