--- a/googleOSD/googleOSD/googleOSD/TimePic.xaml
+++ b/googleOSD/googleOSD/googleOSD/TimePic.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="GoogleQSD.TimePic"
+﻿<UserControl x:Class="GoogleOSD.TimePic"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GoogleQSD"
+             xmlns:local="clr-namespace:GoogleOSD"
              mc:Ignorable="d" 
 			 x:Name="root"
 			 HorizontalAlignment="Center" VerticalAlignment="Center"
