--- a/googleOSD/googleOSD/googleOSD/WebWindow.xaml
+++ b/googleOSD/googleOSD/googleOSD/WebWindow.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GoogleQSD"
+        xmlns:local="clr-namespace:GoogleOSD"
         xmlns:Controls="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls.WebView" 
-		x:Class="GoogleQSD.WebWindow"
+		x:Class="GoogleOSD.WebWindow"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
         Title="web" Height="960" Width="1280" 
