Webでカレンダー表示まで

--- a/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
+++ b/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
@@ -87,6 +87,9 @@
 		<Label Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Right"  Content="ID" />
 		<TextBox Grid.Column="1" Grid.Row="1"
 						Name="Google_Acount_tb" />
+		<StackPanel Grid.Row="1" Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right"  Width="Auto">
+			<Button  x:Name="xaml_bt" Content="xamlカレンダ" Click="Xaml_bt_Click" />
+		</StackPanel>
 		<Label Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Right" Content="パスワード" />
 		<TextBox Grid.Row="2" Grid.Column="1"
 						Name="Google_Password_tb" />
