--- a/googleOSD/googleOSD/googleOSD/WebWindow.xaml
+++ b/googleOSD/googleOSD/googleOSD/WebWindow.xaml
@@ -38,6 +38,46 @@
 			<Setter Property="Padding" Value="10,5,10,5"/>
 			<Setter Property="Margin" Value="10,5,10,5"/>
 			<Setter Property="Template"  Value="{StaticResource buttonStd}"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type Button}">
+						<!--<Border Name="border"
+							BorderThickness="4"
+							BorderBrush="DarkGray"
+							Background="{TemplateBinding Background}"
+							CornerRadius="3">
+							<ContentPresenter VerticalAlignment="Center"
+														HorizontalAlignment="Center" />
+						</Border>-->
+						<Grid>
+							<Ellipse x:Name="ellipse" StrokeThickness="{TemplateBinding BorderThickness}" Stroke="{TemplateBinding BorderBrush}" Fill="{TemplateBinding Background}" SnapsToDevicePixels="true"/>
+							<ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+						</Grid>
+						<ControlTemplate.Triggers>
+									<Trigger Property="IsDefaulted" Value="true">
+										<Setter Property="Stroke" TargetName="ellipse" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+									</Trigger>
+									<Trigger Property="IsMouseOver" Value="true">
+								<Setter Property="Foreground" Value="Red"/>
+								<!--<Setter Property="Fill" TargetName="ellipse" Value="{StaticResource Button.MouseOver.Background}"/>-->
+										<!--<Setter Property="Stroke" TargetName="ellipse" Value="{StaticResource Button.MouseOver.Border}"/>-->
+									</Trigger>
+									<Trigger Property="IsPressed" Value="true">
+										<Setter Property="Foreground" Value="Blue"/>
+
+								<!--<Setter Property="Fill" TargetName="ellipse" Value="{StaticResource Button.Pressed.Background}"/>-->
+										<!--<Setter Property="Stroke" TargetName="ellipse" Value="{StaticResource Button.Pressed.Border}"/>-->
+									</Trigger>
+									<Trigger Property="IsEnabled" Value="false">
+										<Setter Property="Foreground" Value="Green"/>
+								<!--<Setter Property="Fill" TargetName="ellipse" Value="{StaticResource Button.Disabled.Background}"/>-->
+										<!--<Setter Property="Stroke" TargetName="ellipse" Value="{StaticResource Button.Disabled.Border}"/>-->
+										<!--<Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>-->
+									</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
 		</Style>
 
 		<ControlTemplate x:Key="buttonRadius"  TargetType="Button">
@@ -50,6 +90,7 @@
                               HorizontalAlignment="Center" />
 			</Border>
 		</ControlTemplate>
+
 		<Style x:Key="bt_radius" TargetType="Button">
 			<Setter Property="Width" Value="30"/>
 			<Setter Property="Height" Value="30"/>
@@ -92,16 +133,16 @@
 			<Button  x:Name="refresh_bt"  Content="更新" Click="Refresh_bt_Click"
 							Style="{StaticResource bt_radius}"
 							/>
-			<TextBox  TextWrapping="Wrap" HorizontalAlignment="Stretch" 
+			<TextBox  TextWrapping="Wrap" HorizontalAlignment="Stretch"  VerticalAlignment="Center"
+							Width = "700" Height="auto"
 						 Text="{Binding Source, ElementName=web_wb, Mode=OneWay}"
-						VerticalAlignment="Center" 
-						x:Name="url_tb" TextChanged="Url_tb_TextChanged" Width="615"  />
+						x:Name="url_tb" TextChanged="Url_tb_TextChanged" />
 			<StackPanel x:Name="status_sp"  Orientation="Horizontal" HorizontalAlignment="Right"
-							Background="DarkRed"  Margin="0,5,0,0" Width="955">
-				<Label Foreground="White" FontSize="18"  HorizontalAlignment="Right"
+							Background="DarkRed"  Margin="0,0,0,0" Width="auto">
+				<Label Foreground="White" FontSize="12"  HorizontalAlignment="Right"
 						TextBlock.TextAlignment="Right" 
 						Content="予定を仮作成しました。不要なら削除ボタンをクリックして下さい" Width="auto"/>
-				<Button   HorizontalAlignment="Right" Margin="10,5,10,5"  FontSize="18" Width="50"
+				<Button   HorizontalAlignment="Right" Margin="10,5,5,5"  FontSize="12" Width="50"
 						x:Name="del_event_bt"  Content="削除" />
 			</StackPanel>
 
