--- a/googleOSD/googleOSD/googleOSD/GCalender.xaml
+++ b/googleOSD/googleOSD/googleOSD/GCalender.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:GoogleOSD"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
-        Title="スケジュール管理" Height="800" Width="1050" 
+        Title="スケジュール管理" Height="1000" Width="1400" Padding="10"
 		SizeChanged="MetroWindow_SizeChanged" ScrollViewer.HorizontalScrollBarVisibility="Auto" 
 		ScrollViewer.VerticalScrollBarVisibility="Auto" Closed="Window_Closed">
 
@@ -14,7 +14,7 @@
 	<Window.Resources>
 		<ResourceDictionary Source="/Style/StyleDic.xaml"/>
 	</Window.Resources>
-	<Grid x:Name="MainContainer" HorizontalAlignment="Stretch" Margin="10,10,10,10">
+	<Grid x:Name="MainContainer" HorizontalAlignment="Stretch" Margin="10,10,10,20">
 		<Button x:Name="Back_bt" Content="▲" HorizontalAlignment="Left" Margin="17,21,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="0.387,0.485" Click="Back_bt_Click"/>
 		<ComboBox x:Name="cbYearMonth" HorizontalAlignment="Left" Margin="73,20,0,0" VerticalAlignment="Top" Width="139" SelectionChanged="cbYearMonth_SelectionChanged" FontSize="18"/>
 		<Button x:Name="Next_bt" Content="▼" HorizontalAlignment="Left" Margin="241,21,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="0.387,0.485" Click="Next_bt_Click"/>
@@ -25,7 +25,7 @@
 					 Click="GDrive_bt_Click"/>
 		<Label x:Name="lbDate" Content="選択された日付：" HorizontalAlignment="Right" Margin="0,20,275.2,0" VerticalAlignment="Top" Width="94"/>
 		<Label x:Name="lbSelectedDate" Content="" Margin="0,20,153.2,0" VerticalAlignment="Top" Width="102" HorizontalAlignment="Right"/>
-		<Label Content="の表示" Margin="870,20,101.2,0" VerticalAlignment="Top"/>
+		<Label Content="の表示" Margin="1165,20,10,0" VerticalAlignment="Top"/>
 		<Button HorizontalAlignment="Left" Margin="922,19,0,0" VerticalAlignment="Top" Width="33" RenderTransformOrigin="0.485,-0.162" AutomationProperties.HelpText="作成中"
 						Name="Weekly_bt"  Content="週" Click="Weekly_bt_Click"/>
 		<Button HorizontalAlignment="Left" Margin="970,19,0,0" VerticalAlignment="Top" Width="33" RenderTransformOrigin="0.485,-0.162" AutomationProperties.HelpText="作成中"
