--- a/uitest/uitest/MainWindow.xaml
+++ b/uitest/uitest/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:uitest"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Start" Height="300" Width="500">
+    <Grid >
+		<Label Content="XAMLに無いUIのサンプル集" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top"/>
+		<local:ToggleSwitch HorizontalAlignment="Left" Height="100" Margin="45,65,0,0" VerticalAlignment="Top" Width="100"/>
+	</Grid>
 </Window>
